# coPI-python-opus

./: .env.example  .gitignore  AGENT.md  CLAUDE.md  Dockerfile  docker-compose.prod.yml  docker-compose.yml  labbot-spec.md  orcids.txt  pyproject.toml
alembic/versions/: 0001_initial.py  0002_add_llm_call_logs.py  0005_add_private_profile_columns.py  0006_add_delegate_slack_ids.py  0007_add_web_delegates.py  0008_email_notifications.py  0009_profile_revisions.py  0010_add_podcast_episodes.py
docs/: agent-flow.md
profiles/private/: briney.md  cravatt.md  deniz.md  forli.md  grotjahn.md  ken.md  lotz.md  petrascheck.md  racki.md  saez.md  su.md  ward.md  wiseman.md  wu.md
profiles/public/: briney.md  cravatt.md  deniz.md  forli.md  grotjahn.md  ken.md  lotz.md  petrascheck.md  racki.md  saez.md  su.md  ward.md  wiseman.md  (+1 more)
prompts/: agent-kickstart.md  agent-respond-decision.md  agent-system.md  email-reply-classify.md  phase2-prune.md  phase2-scan-filter.md  phase4-thread-reply.md  phase5-new-post.md  podcast-select.md  podcast-summarize.md  private-profile-synthesis.md
scripts/: test_podcast_su.py  wipe_slack.py
specs/: admin-dashboard.md  agent-system.md  auth-and-user-management.md  data-model.md  email-proposal-review.md  labbot-podcast.md  pi-interaction.md  profile-ingestion.md  profile-versioning.md  tech-stack.md  web-delegates.md
src/: cli.py  config.py  database.py  dependencies.py  main.py
templates/: base.html  settings.html  unsubscribe.html
tests/: test_delegates.py  test_message_log.py  test_profile_versioning.py  test_simulation_logic.py
(+66 files in other folders)
